Bolingo & Shahid Completed the Project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    Hello World!
+    <div class="top-container">
+        <img src="images/cloud.png" alt="cloud" class="top-cloud">
+        <h1>Hey! this is bolingo & Shahid.</h1>
+        <h2>Web Developer</h2>
+        <img src="images/cloud.png" alt="cloud" class="bottom-cloud">
+        <img src="images/mountain.png" alt="mountain">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img src="images/Profile pic.jpg" alt="picture" class="pic" border-radius:100%>
+            <h2>Hello.</h2>
+            <p>We love Programming and cooking.</p>
+            </div>
+            <hr>
+            <div class="skills">
+                <h2>Our Skills.</h2>
+                <div class="skill-row">
+                    <img src="images/computer.png" alt="computer" class="skill1">
+                    <h3>Programming</h3>
+                    <p>HTML,CSS And Javascript are the languages I Have Worked On.</p>
+                </div>
+                <div class="skill-row">
+                    <img src="images/chillies.png" alt="" class="skill2">
+                    <h3>Eating</h3>
+                    <p>We love Eating ❤️❤️❤️</p>
+                </div>
+            </div>
+            <hr>
+            <div class="contact-me">
+                <h2>Get In touch with Us</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a class="btn" href="">Contact Us</a>
+            </div>
+    </div>
+    <div class="bottom-container">
+        <a class="footer-link" href="">LinkedIn</a>
+        <a class="footer-link" href="">Twitter</a>
+        <a class="footer-link" href="">Website</a>
+        <p class="copywrite">©️ Bolingo & Shahid </p>
+    </div>
 </body>
+
 </html>
